# PulseCast

./: .gitignore  AGENTS.md  DEPLOYMENT.md  PULSECAST_SPEC.md  README.md  docker-compose.yml  telemetry-id  test_workflow.py
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  llm.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  credentials.py  podcast.py
backend/app/graph/: __init__.py  checkpointer.py  graph.py
backend/app/models/: __init__.py  state.py
backend/app/services/: __init__.py  audio.py  credentials.py  ingestion.py  tts_client.py
backend/app/storage/: __init__.py  repository.py  supabase_client.py
backend/migrations/: 001_initial_schema.sql  002_add_llm_provider.sql  003_auth_byok.sql  004_private_audio_storage.sql  README.md
backend/tests/: test_article_to_podcast_pipeline.py  test_audio_service.py
docker/tts/: Dockerfile  tts_server.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: podcast.ts
frontend/src/components/: AudioPlayer.tsx  CredentialSettings.tsx  ErrorState.tsx  LLMProviderSelect.tsx  LLMSettings.tsx  ProgressTimeline.tsx  RecentJobs.tsx  ScriptEditor.tsx  ScriptViewer.tsx  SourcePanel.tsx  UrlInput.tsx
frontend/src/hooks/: useJob.ts  useLLMSettings.ts  useLibrary.ts  usePolling.ts
frontend/src/types/: podcast.ts
my-clerk-react-app/: index.html  package.json
(+1 files in other folders)
