[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "readability-lxml>=0.8.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.27.0",
]
