[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pydub>=0.25.0",
    "python-multipart>=0.0.6",
    "readability-lxml>=0.8.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "elevenlabs>=2.56.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
